Fix scalability issues on mobile screens

--- a/src/components/HeroSection.css
+++ b/src/components/HeroSection.css
@@ -25,8 +25,7 @@ video {
 }
 
 .hero-container > p,
-span,
-Button {
+span {
   margin-top: 8px;
   color: #fff;
   font-size: 32px;
@@ -40,10 +39,8 @@ Button {
 
 .hero-btns .btn {
   margin: 6px;
-}
-
-.fa-play-circle {
-  margin-left: 20px;
+  font-family: "JetBrains Mono", "Trebuchet MS", "Lucida Sans Unicode",
+    "Lucida Grande", "Lucida Sans", Arial, sans-serif;
 }
 
 @media screen and (max-width: 960px) {
@@ -58,7 +55,7 @@ Button {
   }
 }
 
-@media screen and (max-width: 770px) {
+@media screen and (max-width: 840px) {
   .hero-container > h1 {
     font-size: 50px;
     margin-top: -100px;
